--- a/Subaru Site/SimpleSubapage.html
+++ b/Subaru Site/SimpleSubapage.html
@@ -12,7 +12,7 @@
         <h1>Subaru</h1>
         </header>
 
-        <div class="continer"> 
+        <div class="container"> 
             <div class="main-content">
                 <p>Subaru is considered a titan in the of world of motorsports. They have competed in dozens of rally cross events and gained their prestigious reputation through victories on rugged terrain.</p>
 
